# comic-pile

./: .gitignore  PROJECT_BIBLE.md  README.md  build-fast.cmd  build-release.cmd
.github/workflows/: qt-windows-build.yml
Database/: library.db
comicflow-qt/: CMakeLists.txt  README.md  app_icon.rc
comicflow-qt/cmake/: UpdateBuildIteration.cmake
comicflow-qt/qml/: DatabaseMigrationWindow.qml  Main.qml
comicflow-qt/qml/components/: AboutDialog.qml  ActionResultDialog.qml  AppErrorMapper.js  AppLanguageCatalog.js  AppMessagePayload.js  AppSharedUtils.js  AppText.js  BottomBarGridDensityControl.qml  BottomBarHelperButton.qml  ComicVineApiKeyDialog.qml  ContextMenuPopup.qml  DeleteConfirmDialog.qml  DeleteErrorDialog.qml  FailedImportsDialog.qml  FocusEdgeLine.qml  HelpContent.js  HelpDialog.qml  HeroEditIconButton.qml  HoverActionBar.qml  HoverActionButton.qml  ImportConflictDialog.qml  ImportProgressOverlay.qml  InsetEdgeSurface.qml  IssueCard.qml  IssueMetadataDialog.qml  IssueNumberText.js  MainDialogHost.qml  MainLibraryPane.qml  MainSidebar.qml  MainStartupLayer.qml  MainStartupState.qml  MetadataDropdownField.qml  MetadataTextUtils.js  NavigationHelperButton.qml  OnboardingAssets.js  PopupActionButton.qml  PopupBodyColumn.qml  PopupCloseBehavior.qml  PopupCloseButton.qml  PopupConfirmDialog.qml  (+52 more)
comicflow-qt/qml/controllers/: AppSettingsController.qml  ComicVineAutofillController.qml  DeleteController.qml  HeroSeriesController.qml  ImportController.qml  ImportSessionController.qml  IssueSelectionController.qml  LibraryBrowseController.qml  LibraryFacade.qml  MetadataDialogController.qml  NavigationSurfaceController.qml  PopupController.qml  ReaderCoverController.qml  ReaderDisplayModeController.qml  ReaderPopupStateController.qml  ReaderSessionController.qml  ReaderSpreadLayout.js  ReadingContinuationController.qml  SeriesHeaderController.qml  SeriesSelectionController.qml  SettingsActionController.qml  StartupController.qml  StartupSnapshotController.qml  StartupTelemetryController.qml  WindowDisplayController.qml
comicflow-qt/qml/tests/: Workstream1ContractSmoke.qml  Workstream2RecoverySmoke.qml
comicflow-qt/src/: main.cpp
comicflow-qt/src/common/: scopedsqlconnectionremoval.h  singleinstanceguard.cpp  singleinstanceguard.h  startuplaunchbootstrap.cpp  startuplaunchbootstrap.h
comicflow-qt/src/metadata/: comicvineautofillservice.cpp  comicvineautofillservice.h
comicflow-qt/src/settings/: portablesettingsutils.cpp  portablesettingsutils.h
comicflow-qt/src/storage/: archivepacking.cpp  archivepacking.h  archiveprocessutils.cpp  archiveprocessutils.h  archivesupportutils.cpp  archivesupportutils.h  comicinfoarchive.cpp  comicinfoarchive.h  comicinfoops.cpp  comicinfoops.h  comicslistmodel.cpp  comicslistmodel.h  comicslistmodel_delete.cpp  comicslistmodel_hero.cpp  comicslistmodel_import.cpp  comicslistmodel_metadata.cpp  comicslistmodel_reader.cpp  comicslistmodel_startup.cpp  comicsmodelutils.cpp  comicsmodelutils.h  datarootrelocationbootstrap.cpp  datarootrelocationbootstrap.h  datarootrelocationops.cpp  datarootrelocationops.h  datarootsettingsutils.cpp  datarootsettingsutils.h  deletestagingops.cpp  deletestagingops.h  duplicaterestoreresolver.cpp  duplicaterestoreresolver.h  fingerprinthistoryutils.cpp  fingerprinthistoryutils.h  imagepreparationops.cpp  imagepreparationops.h  importduplicateclassifier.cpp  importduplicateclassifier.h  importmatching.cpp  importmatching.h  importruntimeutils.cpp  importruntimeutils.h  (+36 more)
comicflow-qt/src/tools/: comic_pile_regression.cpp  comic_pile_smoke.cpp  comic_pile_workstream1.cpp  comic_pile_workstream2.cpp
comicflow-qt/src/updates/: bundledreleasenotes.cpp  bundledreleasenotes.h  releasecheckservice.cpp  releasecheckservice.h  releasedownloadservice.cpp  releasedownloadservice.h  releaseinstallservice.cpp  releaseinstallservice.h
release/: README.txt
release/Database/: library.db
release/License/: 00-COMIC-PILE-LICENSE.txt  01-README.txt  02-SOURCE-CODE.txt  03-QT-NOTICE.txt  04-DJVULIBRE-NOTICE.txt  07-7ZIP-NOTICE.txt  08-COMICBOOKPLUS-ATTRIBUTION.txt
release/WhatsNew/: 0.15.3.md  whats-new-patch-notes.md
tools/djvulibre/: NOTICE.txt
tools/qt-imageformats/: README.txt
